# desafio-dio-fastapi

./: .gitignore  README.md  dio-bank-fastapi-Insomnia-application.yaml  pyproject.toml
src/: database.py  main.py  security.py
src/controllers/: cliente.py  conta.py
src/models/: cliente.py  conta.py
src/schema/: cliente.py  conta.py
src/services/: cliente.py  conta.py
src/views/: cliente.py  conta.py
